# OguzokBot

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
app/: bot.py
app/core/: __init__.py  config.py  embeddings.py  llm_client.py  prompts.py  utils.py
app/rag/: __init__.py  rag.py  tagger.py
app/scripts/: add_tags.py  build_index.py
data/: quotes.index  quotes.json  quotes.meta.json
